--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
 }
 
 header {
-  background-color: var(--secondary-color);
   padding: 1rem;
   display: flex;
   justify-content: flex-end;
+  background-color: var(--secondary-color);
 }
 
 .search {
@@ -85,9 +85,11 @@ main {
 .movie-info span.green {
   color: lightgreen;
 }
+
 .movie-info span.orange {
   color: orange;
 }
+
 .movie-info span.red {
   color: red;
 }
@@ -101,7 +103,8 @@ main {
   right: 0;
   max-height: 100%;
   transform: translateY(101%);
-  transition: transform 0.3 ease-in;
+  overflow-y: auto;
+  transition: transform 0.3s ease-in;
 }
 
 .movie:hover .overview {
